@@ -38,30 +38,40 @@
 ##' has not been enabled.
 ##'
 ##' @section Notes:
-##' The (internal) conversion to (fractional) seconds since the epoch is
+##' By default, the (internal) conversion to (fractional) seconds since the epoch is
 ##' relative to the locatime of this system, and therefore not completely
 ##' independent of the settings of the local system. This is to strike a
 ##' balance between ease of use and functionality.  A more-full featured
 ##' conversion could be possibly be added with support for arbitrary
 ##' reference times, but this is (at least) currently outside the scope of
 ##' this package. See the \pkg{RcppCCTZ} package which offers some
-##' timezone-shifting and differencing functionality.
+##' timezone-shifting and differencing functionality. As of version 0.0.5 one
+##' can also parse relative to UTC avoiding the localtime issue,
 ##'
 ##' Times and timezones can be tricky. This package offers a heuristic approach,
 ##' it is likely that some input formats may not be parsed, or worse, be parsed
 ##' incorrectly. This is not quite a \href{https://xkcd.com/327/}{Bobby Tables}
 ##' situation but care must always be taken with user-supplied input.
 ##'
-##' @section Issues:
-##'
 ##' The Boost Date_Time library cannot parse single digit months or
 ##' days. So while \sQuote{2016/09/02} works (as expected),
 ##' \sQuote{2016/9/2} will not. Other non-standard formats may also
 ##' fail.
 ##'
-##' The is a known issue (discussed at length in issue tick 5) where
-##' Australian times are off by an hour. This seems to affect only
-##' Windows, not Linux.
+##' The is a known issue (discussed at length in
+##' \href{https://github.com/eddelbuettel/anytime/issues/5}{issue
+##' ticket 5}) where Australian times are off by an hour. This seems
+##' to affect only Windows, not Linux.
+##'
+##' When given a vector, R will coerce it to the type of the first
+##' element. Should that be \code{NA}, surprising things can
+##' happen: \code{c(NA, Sys.Date())} forces both values to
+##' \code{numeric} and the date will not be parsed correctly (as its
+##' integer value becomes numeric before our code sees it). On the
+##' other hand, \code{c(Sys.Date(), NA)} works as expected parsing as
+##' type Date with one missing value. See
+##' \href{https://github.com/eddelbuettel/anytime/issues/11}{issue
+##' ticket 11}) for more.
 ##'
 ##' @section Operating System Impact:
 ##' On Windows systems, accessing the \code{isdst} flag on dates or times
